Fixed wording, hid slideshow on mobile so ads are first

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -221,7 +221,7 @@
 	#hours-check-mobile {
 	display:block;
 	}
-	
+
 }
 
 @media only screen and (max-width:850px) {
@@ -312,6 +312,9 @@
 		position:relative;
 		margin:10px auto;
 	}
+	.shophome{
+		display:none;
+	}
 }
 
 @media only screen and (min-width:825px) {
@@ -331,8 +334,8 @@
 }
 .cat-right{
 	width: 100%;
-}	
-	
+}
+
 }
 @media only screen and (max-width:700px) {
 	#department-main {
